<resources>
    <string name="app_name">Aad1920Ejemplo2</string>
    <string name="interno">Interno</string>
    <string name="publico">Público</string>
    <string name="privado">Privado</string>
    <string name="nombre">Introduce el nombre del archivo:</string>
    <string name="valor">Introduce  el valor que quieres escribir:</string>
    <string name="leer">Leer</string>
    <string name="escribir">Escribir</string>
    <string name="respNo">No</string>
    <string name="respSi">Sí</string>
    <string name="tituloExplicacion">Warning</string>
    <string name="mensajeExplicacion">Lo necesito</string>
    <string name="tituloExplicacion2">Lo necesito</string>
    <string name="mensajeExplicacion2">Lo necesito</string>
    <string name="title_activity_ajustes">Ajustes</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ajustes">ajustes</string>
    <string name="ayuda">ayuda</string>
</resources>
